fix icon alignments

--- a/css/wayfinding.css
+++ b/css/wayfinding.css
@@ -28,6 +28,9 @@
       			 
       			} */
 
+.fa-lg {
+  line-height: 1em !important;
+}
 
 /* byline */
 
